# ai-media-expert

./: .env.example  .flake8  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  README_SERVICES.md  TEST_REPORT.md  ai_media_expert.db  chat_history.md  check_ai_config.py  check_analysis.py  cookie.example.txt  cookie.txt  create_demo_user.py  create_test_user.py  debug_api.py  debug_download_api.py  debug_frontend_issue.py  debug_realtime_api.py  debug_videos_api.py  docker-compose.yml  douyin_analysis_report.md  douyin_cookie_fields_guide.md  file_manager.html  pyproject.toml  rescan_videos.py  start.py  start_all_services.bat  start_auto.py  start_ngrok.bat  stop_all_services.bat  test_api_debug.py  test_base64_analysis.py  test_base64_direct.py  test_base64_video.py  test_basic_upload.html  test_curl_debug.py  test_direct_api.py  test_douyin_abogus.py  (+38 more)
.github/: pull_request_template.md
.github/workflows/: ci.yml
Docs/: 01-Init初始思路.md  02.1-视频下载专家需求规格说明书.md  02.2-视频解读专家需求规格说明书.md  02.3-视频字幕专家需求规格说明书.md  03-系统架构设计文档.md  04-数据库设计文档.md  05-API接口设计文档.md  06-技术实现指南.md  07-部署运维文档.md  08-开发规范和代码标准文档.md  09-安全架构设计文档.md  10-测试策略和测试计划文档.md  11-配置管理规范文档.md  README.md  code-review-cleanup-report.md  ffprobe-video-fields.md  ngrok-setup-guide.md  todo.md  video-analysis-business-flow.md  video-analysis-development-plan.md  视频下载功能模块开发计划.md  视频下载数据库设计.md
Docs/videodownload/: 系统配置页面扩展设计.md  视频下载API设计.md  视频下载前端页面设计.md  视频下载平台URL规范.md  视频下载数据库设计.md
app/: __init__.py  app.py  main.py
app/api/: __init__.py  deps.py
app/core/: __init__.py  app_logging.py  config.py  database.py  db_manager.py  environment.py  logging.py  migration_manager.py  security.py
app/crawlers/: __init__.py  base_crawler.py
app/middleware/: __init__.py  exception_handler.py
app/models/: __init__.py  download_history.py  prompt_template.py  system_config.py  tag_group.py  uploaded_file.py  user.py  video.py  video_analysis.py
app/schemas/: __init__.py  auth.py  common.py  prompt_template.py  system_config.py  tag_group.py  user.py  video.py  video_analysis.py  video_upload.py
app/services/: __init__.py  ai_service.py  analysis_service.py  download_api_client.py  download_history_service.py  download_queue_manager.py  download_service.py  platform_adapters.py  video_metadata.py  video_parsing_service.py  video_processing.py  websocket_manager.py
app/tasks/: __init__.py  analysis_tasks.py  celery.py  celery_app.py  download_tasks.py  maintenance_tasks.py  video_tasks.py
app/tests/: test_app_smoke.py  test_download_api_client.py  test_download_endpoints.py  test_download_tasks.py  (+3 more)
frontend/: .eslintrc.cjs  package-lock.json  package.json  start.bat  tailwind.config.js  tsconfig.json  vite.config.ts
frontend_backup/: README.md  index.html  package-lock.json  package.json  tsconfig.json
migrations/: add_download_features.sql  migration_20250919_103313.json
scripts/: add_debug_info_migration.py  add_download_config_migration.py  add_file_created_at_migration.py  add_transmission_method_migration.py  add_user_id_to_uploaded_files.py  add_user_id_to_video_analyses.py  add_video_fields_migration.py  add_video_file_path_migration.py  add_video_ratio_migration.py  add_video_url_migration.py  check_db_data.py  check_video_ratio_data.py  create_missing_tables.py  create_uploaded_files_table.py  create_video_analysis_migration.py  db_auto_setup.py  download_api_stub.py  explore_video_info.py  get_original_file_time.py  init_db.py  install_redis_windows.py  integration_manager.py  manual_tools.md  run_download_migration.py  start_ngrok.py  start_redis.py  sync_uploaded_files_from_disk.py  sync_upstream.py  test_exif_time.py  test_filename_time.py  test_mp4_time.py  test_video_info.py  update_logging_imports.py  upgrade_strategy.md  upgrade_workflow.bat  version_manager.py
static/: index.html
(+99 files in other folders)
