[project]
name = "ai-media-expert"
version = "0.1.0"
description = "AI新媒体专家系统 - 视频下载和分析平台"
requires-python = ">=3.9"
authors = [
    {name = "AI Media Expert Team", email = "team@ai-media-expert.com"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Web框架
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    # 数据库和ORM
    "sqlalchemy>=2.0.23",
    # 缓存和任务队列
    "redis>=5.0.1",
    "celery>=5.3.4",
    # 数据验证和配置
    "pydantic[email]>=2.5.2",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    # 认证和安全
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    # 视频处理
    "yt-dlp>=2023.12.30",
    "opencv-python>=4.8.1",
    "pillow>=10.1.0",
    # 文件处理
    "aiofiles>=23.2.1",
    # 日志和监控
    "structlog>=23.2.0",
    # 工具库
    "httpx>=0.25.2",
    "moviepy>=2.2.1",
    "exifread>=3.5.1",
    "pymediainfo>=7.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pre-commit>=3.6.0",
]

ai = [
    "torch>=2.1.2",
    "transformers>=4.36.2",
    "openai-whisper>=20231117",
    "ultralytics>=8.0.206",
]

ui = [
    "gradio>=4.8.0",
]

metrics = [
    "prometheus-client>=0.19.0",
]

migrations = [
    "alembic>=1.13.1",
]

file-magic = [
    "python-magic>=0.4.27",
]

ffmpeg-py = [
    "ffmpeg-python>=0.2.0",
]

cli = [
    "click>=8.1.7",
    "rich>=13.7.0",
]

postgres = [
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
]

[project.scripts]
ai-media-expert = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config --ignore-glob=test_*.py --ignore-glob=debug_*.py"
testpaths = ["app/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["frontend", "docs", "scripts", "migrations", ".venv", "venv"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
